# pal_locomotion_actions_slmc

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  biped_walking_actions.xml  package.xml
include/pal_locomotion_actions_slmc/: balance_ds_action.h  balancing_action.h  com_action.h  csv_com_action.h  csv_utils.h  csv_walking_action.h  csv_walking_action_prev.h  icp_control_utils.h  move_icp_ds_action.h  single_leg_stand_action.h  spline.h  sstand_one_leg_action.h  stand_down_leg_action.h  stand_one_leg_action.h  static_walk.h  swing_trajectory.h  walking_action_base.h  walking_action_slmc.h  wbc_action.h  wbc_trajectory_action.h
plotjuggler_config/: com_foot.xml
script/: trajectory_publisher.py  walking_motion_generation_CoM.py  walking_motion_generation_LIPM.py
script/utils/: pybullet_debug_plot.py  trajectory.py
src/: icp_control_utils.cpp
src/actions/: CMakeLists.txt  balance_ds_action.cpp  balancing_action.cpp  biped_walking_actions_plugins.cpp  com_action.cpp  csv_com_action.cpp  csv_walking_action(backup).cpp  csv_walking_action.cpp  csv_walking_action_prev.cpp  move_icp_ds_action.cpp  single_leg_stand_action.cpp  sstand_one_leg_action.cpp  stand_down_leg_action.cpp  stand_one_leg_action.cpp  static_walk.cpp  walking_action_slmc.cpp  wbc_action.cpp  wbc_trajectory_action.cpp
src/nodes/: CMakeLists.txt  move_swing_leg_waypoints.cpp  push_com_action.cpp  push_csv_com_action.cpp  push_csv_com_action.py  push_csv_walking_action.cpp  push_csv_walking_action_prev.cpp  push_icp_ds_action.cpp  push_single_leg_stand_action.cpp  push_stand_down_leg_action.cpp  push_stand_one_leg_action.cpp  push_walking_action_slmc.cpp  start_wbc_action.cpp
src/nodes/scripts/: push_icp_ds_action.py  push_single_leg_stand_action.py
src/script/: LIPM_optimal_control_casadi.py  trajectory_publisher.py
src/scripts/: push_icp_ds_action.py  talos_offline_com_tracking.py
src/service/: trigger_server_node.cpp
trajectory/: com_trajectory.csv  contact_state_trajectory.csv  lfoot_trajectory.csv  readme  rfoot_trajectory.csv  trajectory_publisher.py
trajectory/dsp_test/: com_traj.csv  cs.csv  readme  trajectory_publisher.py
trajectory/dsp_test1/: cs.csv  push_csv_walking_action_prev.py  support_durations.csv  trajectory_publisher.py
trajectory/dsp_test2/: com_trajectory.csv  push_csv_walking_action_prev.py  run_simulation.py  support_durations.csv  trajectory_publisher.py  zmp_trajectory.csv
trajectory/dsp_test3/: com_traj(fast).csv  com_traj(fast2).csv  com_traj(fast3).csv  com_traj(slow).csv  push_csv_walking_action_prev.py  support_indexes.csv
trajectory/dsp_test_DS1_SS1/: com_trajectory.csv  push_csv_walking_action_prev.py  zmp_trajectory.csv
trajectory/dsp_test_DS2_SS2/: com_trajectory.csv  foot_placement.csv  push_csv_walking_action_prev.py  zmp_trajectory.csv
trajectory/lip_test_DS1/: com_trajectory.csv  push_csv_walking_action_prev.py  readme  support_durations.csv  support_indexes.csv  trajectory_publisher.py  zmp_trajectory.csv
trajectory/ssp_test/: com_trajectory.csv  lfoot_trajectory.csv  trajectory_publisher.py
