<?xml version="1.0"?>
<package format="2">
  <name>pal_locomotion_actions_slmc</name>
  <version>0.3.1</version>
  <description>The pal_locomotion_actions package</description>

  <maintainer email="hilario.tome@pal-robotics.com">Hilario Tomé</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pal_locomotion</depend>
  <depend>pluginlib</depend>

  <export>
    <pal_locomotion plugin="${prefix}/biped_walking_actions.xml" />
  </export>

</package>
